...
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="How about joining League of Loser in"
            android:gravity="center" />

        <Button
            android:id="@+id/ragequit_btn"
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:text="r/QUIT"/>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/final_board"
        android:layout_width="500dp"
        android:layout_height="300dp"
...
