...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:textSize="40sp"
            android:textStyle="bold"
            android:text="Battle"
            android:layout_marginRight="15dp"
            android:onClick="selectPersonalizeMode"/>

    </RelativeLayout>

    <RelativeLayout
...
