...

        </LinearLayout>

    </RelativeLayout>

    <Button
        android:id="@+id/endgame_button"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:textSize="15sp"
        android:text="BACK TO MAIN MENU"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"/>


</LinearLayout>
